--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -88,6 +88,12 @@ p {
   font-family: 'Bellefair', palatino;
 }
 
+#githubLink {
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+}
+
 @-webkit-keyframes GradientBoy {
   0% {
     background-position: 0% 50%; }
