--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -62,6 +62,15 @@ p {
   padding-top: 70px;
   padding-bottom: 70px;
 }
+.contact-container {
+  background-color: rgba(250, 250, 250, .2);
+  border-radius: 1em;
+}
+.contact-container a {
+  color: rgba(250, 250, 250, 1);
+  text-decoration: underline;
+  padding: 0em 2em;
+}
 
 .navbar {
   padding: .2rem 1rem !important;
@@ -89,7 +98,7 @@ p {
 }
 
 #githubLink {
-  max-width: 100%;
+  max-width: 70%;
   height: auto;
   width: auto\9; /* ie8 */
 }
